# Fresh

./: .dockerignore  .env.sample  .gitignore  Dockerfile  docker-compose.yml  main.py  manage.py  pyproject.toml  setup.py
device_mngr_auth/: __init__.py  asgi.py  extensions.py  routers.py  settings.py  urls.py  wsgi.py
device_mngr_auth/auth_line/: line_oauth.py  serializers.py  services.py  urls.py  views.py
device_mngr_auth/auth_user/: constants.py  models.py  permissions.py  serializers.py  urls.py  views.py
device_mngr_auth/auth_user/migrations/: 0001_initial.py
device_mngr_auth/auth_user/tests/: test_setup.py  tests_view.py
device_mngr_auth/borrow/: constants.py  models.py
device_mngr_auth/borrow/migrations/: 0001_initial.py  0002_product_attribute.py  0003_attribute_value.py  0004_remove_attribute_category_remove_attribute_product_and_more.py  0005_alter_attributevalue_attribue.py  0006_gift_giftproducttarget_giftproduct.py  0007_alter_giftproduct_product.py
device_mngr_auth/common/: auth.py  custom_exception_handler.py  exceptions.py  models.py  paginators.py  sendmail.py  sql.py  validate.py
device_mngr_auth/common/constants/: db_fields.py  db_table.py
device_mngr_auth/core/migrations/: 0001_initial.py
device_mngr_auth/core/models/: __init__.py  attribute.py  attribute_value.py  borrow.py  brand.py  category.py  device.py  device_item.py  gift.py  (+8 more)
device_mngr_auth/dashboard/: urls.py  views.py
device_mngr_auth/order/: serializers.py  services.py  urls.py  views.py
sql/: device_ddl_v1_0.sql  device_ddl_v2_0.sql
templates/: email.html
(+1 files in other folders)
